--- a/index.html
+++ b/index.html
@@ -27,22 +27,6 @@
       height: 100%;
       object-fit: cover;
     }
-    #mute-btn {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: rgba(0, 0, 0, 0.6);
-      border: none;
-      border-radius: 50%;
-      padding: 10px;
-      cursor: pointer;
-      z-index: 10;
-    }
-    #mute-btn svg {
-      width: 28px;
-      height: 28px;
-      fill: white;
-    }
     #skip-btn {
       position: absolute;
       top: 10px;
@@ -97,26 +81,18 @@
 </head>
 <body>
   <div id="ad-container">
-    <video id="ad-video" autoplay muted playsinline>
+    <video id="ad-video" autoplay playsinline>
       <source src="gzone-ad1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <button id="mute-btn">
-      <svg id="volume-icon" viewBox="0 0 24 24">
-        <path d="M3 9v6h4l5 5V4L7 9H3z" />
-      </svg>
-    </button>
     <div id="countdown">0</div>
     <button id="skip-btn">×</button>
     <div id="popup">
-      <p>ขอบคุณที่ดูโฆษณา!</p>
       <button onclick="window.location.href='https://your-link-here.com'">ดูข้อมูลเพิ่มเติม</button>
     </div>
   </div>
   <script>
     const video = document.getElementById('ad-video');
-    const muteBtn = document.getElementById('mute-btn');
-    const volumeIcon = document.getElementById('volume-icon');
     const skipBtn = document.getElementById('skip-btn');
     const countdown = document.getElementById('countdown');
     const popup = document.getElementById('popup');
@@ -138,13 +114,6 @@
           }, 500); // ป๊อปอัพแสดงหลังจากวิดีโอจบ
         }
       }, 500);
-    });
-
-    muteBtn.addEventListener('click', () => {
-      video.muted = !video.muted;
-      volumeIcon.innerHTML = video.muted
-        ? '<path d="M16.5 12c0-1.77-.77-3.37-2-4.47l1.41-1.41A8.94 8.94 0 0118.5 12c0 2.21-.81 4.22-2.14 5.88l-1.41-1.41A6.978 6.978 0 0016.5 12zm-4.5 0c0-1.1.45-2.1 1.17-2.83L12.7 7.9C11.63 8.93 11 10.39 11 12s.63 3.07 1.7 4.1l.47-.47A3.978 3.978 0 0112 12zM14.5 12c0-.83-.34-1.58-.88-2.12l-1.41 1.41c.26.26.41.61.41.99s-.15.73-.41.99l1.41 1.41c.54-.54.88-1.29.88-2.12z" />'
-        : '<path d="M3 9v6h4l5 5V4L7 9H3z" />';
     });
 
     skipBtn.addEventListener('click', () => {
