--- a/index.html
+++ b/index.html
@@ -22,27 +22,32 @@
       height: 100%;
       object-fit: cover;
       pointer-events: none;
+      display: none; /* วิดีโอไม่แสดงทันที */
     }
     #skip-btn {
       position: absolute;
       top: 20px;
-      right: 20px;
+      left: 20px;
       background: rgba(0, 0, 0, 0.7);
       color: white;
       padding: 10px 15px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      display: none;
       z-index: 10;
       font-size: 16px;
+      display: flex;
+      align-items: center;
+    }
+    #skip-btn i {
+      margin-right: 8px; /* ขยับไอคอนให้มีระยะห่างจากข้อความ */
     }
     #countdown {
       position: absolute;
       top: 20px;
       right: 20px;
       color: white;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       padding: 8px 12px;
       border-radius: 5px;
       font-size: 14px;
@@ -54,7 +59,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.5);
+      background: rgba(0, 0, 0, 0.5);
       color: white;
       font-size: 20px;
       display: flex;
@@ -72,23 +77,30 @@
       วิดีโอของคุณไม่สามารถเล่นได้
     </video>
     <div id="countdown">กำลังโหลด...</div>
-    <button id="skip-btn" onclick="skipAd()">× ข้ามโฆษณา</button>
+    <button id="skip-btn" onclick="skipAd()">
+      <i class="fas fa-skip"></i> ข้ามโฆษณา
+    </button>
     <div id="tap-to-unmute" onclick="unmuteVideo()">แตะเพื่อเปิดเสียง</div>
   </div>
 
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script>
     const video = document.getElementById('ad-video');
     const skipBtn = document.getElementById('skip-btn');
     const countdown = document.getElementById('countdown');
     const unmuteOverlay = document.getElementById('tap-to-unmute');
 
-    video.onloadedmetadata = function () {
+    // สร้างตัวแปรสำหรับเวลาเริ่มต้น
+    let timer;
+
+    function startCountdown() {
       let duration = Math.floor(video.duration);
       let timeLeft = duration;
 
       countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
 
-      const timer = setInterval(() => {
+      // เริ่มนับถอยหลังเมื่อวิดีโอเริ่มเล่น
+      timer = setInterval(() => {
         timeLeft--;
         if (timeLeft <= 0) {
           clearInterval(timer);
@@ -98,16 +110,18 @@
           countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
         }
       }, 1000);
-    };
-
-    function skipAd() {
-      window.location.href = "https://example.com"; // เปลี่ยนลิงก์ปลายทางที่นี่
     }
 
     function unmuteVideo() {
       video.muted = false;
-      video.play();
-      unmuteOverlay.style.display = 'none';
+      video.style.display = 'block'; // แสดงวิดีโอเมื่อคลิกเพื่อเปิดเสียง
+      video.play(); // เริ่มเล่นวิดีโอ
+      startCountdown(); // เริ่มนับเวลาถอยหลัง
+      unmuteOverlay.style.display = 'none'; // ซ่อนหน้าจอที่ให้คลิกเปิดเสียง
+    }
+
+    function skipAd() {
+      window.location.href = "https://example.com"; // เปลี่ยนลิงก์ปลายทางที่นี่
     }
   </script>
 </body>
