--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     #skip-btn {
       position: absolute;
       top: 20px;
-      left: 20px;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 10px 15px;
+      right: 20px; /* ปรับให้อยู่ด้านขวา */
+      background: transparent;
       border: none;
-      border-radius: 5px;
+      display: none;
       cursor: pointer;
       z-index: 4;
-      font-size: 16px;
-      display: none;
+    }
+    #skip-btn img {
+      width: 40px;
+      height: 40px;
     }
   </style>
 </head>
@@ -82,8 +82,10 @@
       วิดีโอของคุณไม่สามารถเล่นได้
     </video>
     <div id="tap-to-unmute" onclick="unmuteVideo()">แตะเพื่อเปิดเสียง</div>
-    <div id="countdown">เหลือเวลา 5 วินาที</div>
-    <button id="skip-btn" onclick="skipAd()">ข้ามโฆษณา×</button>
+    <div id="countdown">กำลังโหลด...</div>
+    <button id="skip-btn" onclick="skipAd()">
+      <img src="skip-icon.png" alt="ข้ามโฆษณา" />
+    </button>
   </div>
 
   <script>
@@ -92,25 +94,6 @@
     const countdown = document.getElementById('countdown');
     const unmuteOverlay = document.getElementById('tap-to-unmute');
     const thumbnail = document.getElementById('thumbnail');
-    const skipAfterSeconds = 5; // ปรับเวลาที่ต้องการให้แสดงปุ่มข้าม
-
-    function startCountdown() {
-      let timeLeft = skipAfterSeconds;
-
-      countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
-      countdown.style.display = 'block';
-
-      const timer = setInterval(() => {
-        timeLeft--;
-        if (timeLeft <= 0) {
-          clearInterval(timer);
-          countdown.style.display = 'none';
-          skipBtn.style.display = 'block';
-        } else {
-          countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
-        }
-      }, 1000);
-    }
 
     function unmuteVideo() {
       video.muted = false;
@@ -118,11 +101,29 @@
       unmuteOverlay.style.display = 'none';
       video.style.display = 'block';
       video.play();
-      startCountdown();
+
+      video.onloadedmetadata = function () {
+        let duration = Math.floor(video.duration);
+        let timeLeft = duration;
+
+        countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
+        countdown.style.display = 'block';
+
+        const timer = setInterval(() => {
+          timeLeft--;
+          if (timeLeft <= 0) {
+            clearInterval(timer);
+            countdown.style.display = 'none';
+            skipBtn.style.display = 'block'; // แสดงปุ่มหลังนับถอยหลังจบ
+          } else {
+            countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
+          }
+        }, 1000);
+      };
     }
 
     function skipAd() {
-      window.location.href = "https://example.com"; // เปลี่ยนลิงก์ปลายทาง
+      window.location.href = "https://example.com"; // ลิงก์ปลายทาง
     }
   </script>
 </body>
