--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>โฆษณา</title>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
   <style>
     body, html {
       margin: 0;
@@ -11,6 +12,7 @@
       background: black;
       height: 100%;
       overflow: hidden;
+      font-family: 'Prompt', sans-serif;
     }
     #ad-container {
       position: relative;
@@ -49,7 +51,7 @@
     #countdown {
       position: absolute;
       top: 20px;
-      right: 20px;
+      left: 20px;
       color: white;
       background: rgba(0, 0, 0, 0.5);
       padding: 8px 12px;
@@ -62,15 +64,47 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      background: transparent;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      background-color: rgba(255, 255, 255, 0.9);
       border: none;
-      display: none;
+      border-radius: 12px;
+      padding: 8px 16px;
+      font-size: 20px;
+      color: #5A29A7;
+      font-weight: bold;
       cursor: pointer;
       z-index: 4;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      display: none;
+      transition: background-color 0.3s ease;
     }
-    #skip-btn img {
-      width: 40px;
-      height: 40px;
+    #skip-btn:hover {
+      background-color: rgba(255, 255, 255, 1);
+    }
+    #skip-btn svg {
+      width: 24px;
+      height: 24px;
+    }
+    #mute-toggle-btn {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(0, 0, 0, 0.6);
+      border: none;
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 4;
+      cursor: pointer;
+    }
+    #mute-toggle-btn img {
+      width: 28px;
+      height: 28px;
     }
   </style>
 </head>
@@ -81,10 +115,22 @@
       <source src="gzone-ad1.mp4" type="video/mp4" />
       วิดีโอของคุณไม่สามารถเล่นได้
     </video>
-    <div id="tap-to-unmute" onclick="unmuteVideo()">แตะเพื่อเปิดเสียง</div>
+    <div id="tap-to-unmute" onclick="playAdVideo(true)">แตะเพื่อเปิดเสียง</div>
     <div id="countdown">กำลังโหลด...</div>
+
+    <!-- ปุ่มข้ามโฆษณา -->
     <button id="skip-btn" onclick="skipAd()">
-      <img src="skip-icon.png" alt="ข้ามโฆษณา" />
+      <span>ข้ามโฆษณา</span>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <circle cx="12" cy="12" r="10" fill="none" stroke="#5A29A7" stroke-width="2"/>
+        <line x1="8" y1="8" x2="16" y2="16" stroke="#5A29A7" stroke-width="2"/>
+        <line x1="16" y1="8" x2="8" y2="16" stroke="#5A29A7" stroke-width="2"/>
+      </svg>
+    </button>
+
+    <!-- ปุ่มเปิด/ปิดเสียง -->
+    <button id="mute-toggle-btn" onclick="toggleMute()">
+      <img id="mute-icon" src="volume-on.png" alt="เสียงเปิด" />
     </button>
   </div>
 
@@ -94,23 +140,34 @@
     const countdown = document.getElementById('countdown');
     const unmuteOverlay = document.getElementById('tap-to-unmute');
     const thumbnail = document.getElementById('thumbnail');
+    const muteToggleBtn = document.getElementById('mute-toggle-btn');
+    const muteIcon = document.getElementById('mute-icon');
 
+    let hasStarted = false;
     let timer;
 
-    function unmuteVideo() {
-      // แสดงวิดีโอ
+    function playAdVideo(unmute = false) {
+      if (hasStarted) return;
+      hasStarted = true;
+
       video.style.display = 'block';
       thumbnail.style.display = 'none';
       unmuteOverlay.style.display = 'none';
 
-      video.muted = false;
+      video.muted = !unmute;
       video.currentTime = 0;
-      video.play();
 
-      // เริ่มนับถอยหลังหลังวิดีโอเริ่ม
-      const duration = Math.floor(video.duration || 0);
-      let timeLeft = duration;
+      muteToggleBtn.style.display = 'flex';
+      muteIcon.src = video.muted ? 'volume-off.png' : 'volume-on.png';
 
+      video.addEventListener('loadedmetadata', () => {
+        startCountdown(video.duration || 15);
+        video.play();
+      });
+    }
+
+    function startCountdown(duration) {
+      let timeLeft = Math.floor(duration);
       countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
       countdown.style.display = 'block';
 
@@ -119,16 +176,29 @@
         if (timeLeft <= 0) {
           clearInterval(timer);
           countdown.style.display = 'none';
-          skipBtn.style.display = 'block';
+          skipBtn.style.display = 'flex';
         } else {
           countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
         }
       }, 1000);
     }
 
-    function skipAd() {
-      window.location.href = "https://example.com"; // เปลี่ยน URL ตามต้องการ
+    function toggleMute() {
+      video.muted = !video.muted;
+      muteIcon.src = video.muted ? 'volume-off.png' : 'volume-on.png';
+      muteIcon.alt = video.muted ? 'เสียงปิด' : 'เสียงเปิด';
     }
+
+    function skipAd() {
+      window.location.href = "https://example.com"; // เปลี่ยน URL ได้ตามต้องการ
+    }
+
+    // เล่นอัตโนมัติหลัง 3 วินาที ถ้าไม่แตะ
+    setTimeout(() => {
+      if (!hasStarted) {
+        playAdVideo(false);
+      }
+    }, 3000);
   </script>
 </body>
 </html>
