--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       height: 100%;
       object-fit: cover;
       display: none;
+      pointer-events: none;
     }
     #thumbnail {
       position: absolute;
@@ -49,7 +50,7 @@
     #countdown {
       position: absolute;
       top: 20px;
-      right: 20px;
+      left: 20px;
       color: white;
       background: rgba(0, 0, 0, 0.6);
       padding: 6px 10px;
@@ -61,7 +62,7 @@
     #skip-btn {
       position: absolute;
       top: 20px;
-      left: 20px;
+      right: 20px;
       background: rgba(0, 0, 0, 0.6);
       border: none;
       color: white;
@@ -77,30 +78,39 @@
       bottom: 20px;
       right: 20px;
       background: rgba(0, 0, 0, 0.6);
-      color: white;
-      font-size: 20px;
-      border-radius: 50%;
+      border: none;
       width: 44px;
       height: 44px;
+      border-radius: 50%;
       display: none;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       z-index: 5;
     }
+    #mute-toggle svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
+    }
   </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
   <div id="ad-container">
     <img id="thumbnail" src="thumbnail.jpg" alt="หน้าปกโฆษณา" />
-    <video id="ad-video" playsinline>
+    <video id="ad-video" playsinline muted preload="auto">
       <source src="gzone-ad1.mp4" type="video/mp4" />
       วิดีโอของคุณไม่สามารถเล่นได้
     </video>
     <div id="tap-to-unmute" onclick="startVideo(true)">แตะเพื่อเปิดเสียง</div>
     <div id="countdown">เหลือเวลา 0 วินาที</div>
     <button id="skip-btn" onclick="skipAd()">ข้ามโฆษณา</button>
-    <div id="mute-toggle" onclick="toggleMute()">🔈</div>
+    <button id="mute-toggle" onclick="toggleMute()">
+      <!-- mute icon -->
+      <svg id="mute-icon" viewBox="0 0 24 24">
+        <path d="M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5zm2.5 0a7 7 0 0 0-7-7v2a5 5 0 0 1 5 5 5 5 0 0 1-5 5v2a7 7 0 0 0 7-7z"/>
+      </svg>
+    </button>
   </div>
 
   <script>
@@ -110,12 +120,14 @@
     const unmuteOverlay = document.getElementById('tap-to-unmute');
     const thumbnail = document.getElementById('thumbnail');
     const muteToggle = document.getElementById('mute-toggle');
+    const muteIcon = document.getElementById('mute-icon');
 
     let started = false;
     let timer;
+    let autoSkipTimeout;
 
     setTimeout(() => {
-      if (!started) startVideo(false); // เริ่มแบบปิดเสียงหลัง 5 วิ
+      if (!started) startVideo(false); // เริ่มอัตโนมัติแบบปิดเสียงหลัง 5 วิ
     }, 5000);
 
     function startVideo(withSound) {
@@ -138,7 +150,7 @@
     }
 
     function showCountdown() {
-      let timeLeft = Math.floor(video.duration || 15);
+      let timeLeft = isNaN(video.duration) ? 15 : Math.floor(video.duration);
       countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
       countdown.style.display = 'block';
 
@@ -152,6 +164,11 @@
           countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
         }
       }, 1000);
+
+      // ข้ามอัตโนมัติหลัง 10 วิ
+      autoSkipTimeout = setTimeout(() => {
+        skipAd();
+      }, 10000);
     }
 
     function toggleMute() {
@@ -160,12 +177,20 @@
     }
 
     function updateMuteIcon() {
-      muteToggle.textContent = video.muted ? "🔇" : "🔈";
+      muteIcon.innerHTML = video.muted
+        ? '<path d="M1 1l22 22M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5z"/>'
+        : '<path d="M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5zm2.5 0a7 7 0 0 0-7-7v2a5 5 0 0 1 5 5 5 5 0 0 1-5 5v2a7 7 0 0 0 7-7z"/>';
     }
 
     function skipAd() {
-      window.location.href = "https://example.com"; // เปลี่ยน URL ได้เลย
+      clearTimeout(autoSkipTimeout);
+      window.location.href = "https://example.com"; // เปลี่ยน URL ปลายทาง
     }
+
+    // ป้องกันการดาวน์โหลดวิดีโอ
+    video.addEventListener('contextmenu', e => e.preventDefault());
+    video.addEventListener('mousedown', e => e.preventDefault());
+    video.addEventListener('touchstart', e => e.preventDefault());
   </script>
 </body>
 </html>
