--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
       overflow: hidden;
       font-family: sans-serif;
     }
+
     #ad-container {
       position: relative;
       width: 100%;
       height: 100vh;
     }
+
     video {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: none;
+      -webkit-user-select: none;
+      user-select: none;
+      -webkit-touch-callout: none;
+      -webkit-user-drag: none;
       pointer-events: none;
     }
+
     #thumbnail {
       position: absolute;
       width: 100%;
@@ -32,6 +39,7 @@
       object-fit: cover;
       z-index: 1;
     }
+
     #tap-to-unmute {
       position: absolute;
       top: 0;
@@ -47,10 +55,11 @@
       z-index: 2;
       cursor: pointer;
     }
+
     #countdown {
       position: absolute;
       top: 20px;
-      left: 20px;
+      right: 100px;
       color: white;
       background: rgba(0, 0, 0, 0.6);
       padding: 6px 10px;
@@ -59,6 +68,7 @@
       z-index: 3;
       display: none;
     }
+
     #skip-btn {
       position: absolute;
       top: 20px;
@@ -73,44 +83,36 @@
       z-index: 4;
       display: none;
     }
+
     #mute-toggle {
       position: absolute;
       bottom: 20px;
       right: 20px;
       background: rgba(0, 0, 0, 0.6);
-      border: none;
+      color: white;
+      font-size: 20px;
+      border-radius: 50%;
       width: 44px;
       height: 44px;
-      border-radius: 50%;
       display: none;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       z-index: 5;
     }
-    #mute-toggle svg {
-      width: 24px;
-      height: 24px;
-      fill: white;
-    }
   </style>
 </head>
-<body oncontextmenu="return false;">
+<body>
   <div id="ad-container">
     <img id="thumbnail" src="thumbnail.jpg" alt="หน้าปกโฆษณา" />
-    <video id="ad-video" playsinline muted preload="auto">
+    <video id="ad-video" playsinline disablePictureInPicture controlsList="nodownload nofullscreen noremoteplayback">
       <source src="gzone-ad1.mp4" type="video/mp4" />
       วิดีโอของคุณไม่สามารถเล่นได้
     </video>
     <div id="tap-to-unmute" onclick="startVideo(true)">แตะเพื่อเปิดเสียง</div>
-    <div id="countdown">เหลือเวลา 0 วินาที</div>
+    <div id="countdown">เหลือเวลา 10 วินาที</div>
     <button id="skip-btn" onclick="skipAd()">ข้ามโฆษณา</button>
-    <button id="mute-toggle" onclick="toggleMute()">
-      <!-- mute icon -->
-      <svg id="mute-icon" viewBox="0 0 24 24">
-        <path d="M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5zm2.5 0a7 7 0 0 0-7-7v2a5 5 0 0 1 5 5 5 5 0 0 1-5 5v2a7 7 0 0 0 7-7z"/>
-      </svg>
-    </button>
+    <div id="mute-toggle" onclick="toggleMute()">🔈</div>
   </div>
 
   <script>
@@ -120,14 +122,12 @@
     const unmuteOverlay = document.getElementById('tap-to-unmute');
     const thumbnail = document.getElementById('thumbnail');
     const muteToggle = document.getElementById('mute-toggle');
-    const muteIcon = document.getElementById('mute-icon');
 
     let started = false;
     let timer;
-    let autoSkipTimeout;
 
     setTimeout(() => {
-      if (!started) startVideo(false); // เริ่มอัตโนมัติแบบปิดเสียงหลัง 5 วิ
+      if (!started) startVideo(false); // เริ่มแบบปิดเสียงหลัง 5 วิ
     }, 5000);
 
     function startVideo(withSound) {
@@ -150,25 +150,21 @@
     }
 
     function showCountdown() {
-      let timeLeft = isNaN(video.duration) ? 15 : Math.floor(video.duration);
-      countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
       countdown.style.display = 'block';
+      skipBtn.style.display = 'none';
 
       timer = setInterval(() => {
-        timeLeft--;
-        if (timeLeft <= 0) {
+        const timeLeft = Math.ceil(video.duration - video.currentTime);
+        const played = Math.floor(video.currentTime);
+
+        countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
+
+        if (played >= 10) {
           clearInterval(timer);
           countdown.style.display = 'none';
           skipBtn.style.display = 'block';
-        } else {
-          countdown.textContent = `เหลือเวลา ${timeLeft} วินาที`;
         }
-      }, 1000);
-
-      // ข้ามอัตโนมัติหลัง 10 วิ
-      autoSkipTimeout = setTimeout(() => {
-        skipAd();
-      }, 10000);
+      }, 500);
     }
 
     function toggleMute() {
@@ -177,20 +173,12 @@
     }
 
     function updateMuteIcon() {
-      muteIcon.innerHTML = video.muted
-        ? '<path d="M1 1l22 22M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5z"/>'
-        : '<path d="M16.5 12a4.5 4.5 0 0 0-4.5-4.5v9a4.5 4.5 0 0 0 4.5-4.5zm2.5 0a7 7 0 0 0-7-7v2a5 5 0 0 1 5 5 5 5 0 0 1-5 5v2a7 7 0 0 0 7-7z"/>';
+      muteToggle.textContent = video.muted ? "🔇" : "🔈";
     }
 
     function skipAd() {
-      clearTimeout(autoSkipTimeout);
-      window.location.href = "https://example.com"; // เปลี่ยน URL ปลายทาง
+      window.location.href = "https://example.com"; // เปลี่ยน URL ได้เลย
     }
-
-    // ป้องกันการดาวน์โหลดวิดีโอ
-    video.addEventListener('contextmenu', e => e.preventDefault());
-    video.addEventListener('mousedown', e => e.preventDefault());
-    video.addEventListener('touchstart', e => e.preventDefault());
   </script>
 </body>
 </html>
